<resources>
    <string name="app_name">安科资讯</string>
    <string name="action_settings">登出</string>

    <string name="load_failed">逗我呢，没网络啊...</string>

    <string name="content">正文</string>

    <string name="title_activity_sliderbar">SliderbarActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_back">返回</string>
    <string name="share">分享</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码 (可选)</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱格式非法</string>
    <string name="error_invalid_password">密码长度太短了</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此字段必填</string>
    <string name="permission_rationale">"需要提供完整电子邮件"
    </string>
    <string name="icon_str">点击头像登录</string>
    <string name="login">登录</string>
    <string name="title_activity_scrolling_news_info">ScrollingNewsInfoActivity</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">面板</string>
    <string name="title_notifications">通知</string>
    <string name="comment">Comment</string>
    <!-- Strings related to login -->
    <string name="sign_in">登录</string>
    <string name="register">注册</string>
    <string name="title_activity_register">登录</string>
    <string name="action_register">登录</string>
    <string name="hint_username">请输入用户名</string>
    <string name="prompt_password_again">请再次输入密码</string>
    <string name="str_logout">登出</string>
    <string name="hide_down">隐藏</string>
    <string name="comment_content">评论内容</string>
    <string name="send">发送</string>
    <string name="delete_comment">删除</string>
    <string name="action_exit">登出</string>
    <string name="comment_title">评论</string>
    <string name="fab_commnet">评论</string>
    <string name="fab_share">分享</string>
    <string name="menu">关闭</string>
    <string name="social_comment">我有话说</string>
    <string name="school_url">常用</string>
</resources>
