<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <ListView
        android:id="@+id/comment_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginBottom="50dp" />

    <RelativeLayout
        android:id="@+id/rl_comment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:visibility="gone"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/hide_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide_down"
            android:textSize="13sp"
            android:textColor="@color/txtgrey"
            android:drawableBottom="@drawable/hide_dowm"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:layout_toRightOf="@id/hide_down"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/comment_content"
            android:hint="@string/comment_content"
            android:textSize="15sp"
            android:singleLine="true"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_toRightOf="@id/hide_down"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/comment_send"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:text="@string/send"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:background="@color/mainColor"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="15dp"/>
    </RelativeLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu_red"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingRight="30dp"
        android:paddingBottom="55dp"
        android:paddingLeft="10dp"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        fab:menu_fab_label="@string/menu">


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pencil"
            fab:fab_size="mini"
            fab:fab_label="@string/fab_commnet" />


    </com.github.clans.fab.FloatingActionMenu>
</FrameLayout>
